--- a/package.json
+++ b/package.json
@@ -1,1 +1,10 @@
-
+{
+  "name": "openai-vercel-proxy",
+  "version": "1.0.0",
+  "description": "A simple Vercel proxy for OpenAI API",
+  "main": "api/proxy.js",
+  "scripts": {
+    "start": "vercel dev"
+  },
+  "license": "MIT"
+}
